--- a/stories/styles.css
+++ b/stories/styles.css
@@ -1,13 +1,13 @@
-.item {
+.choice {
   background-color: lightgrey;
 }
-.item.item__selected {
+.choice.choice__selected {
   background-color: red;
   color: white;
 }
-.item.item__hovered {
+.choice.choice__hovered {
   border: 2px solid lightblue;
 }
-.item.item__focused {
+.choice.choice__focused {
   border: 2px solid lightgreen;
 }
