--- a/stories/styles/basic.css
+++ b/stories/styles/basic.css
@@ -1,20 +1,22 @@
-.choices__label {
+.Choices__label {
   display: none;
 }
-.choice {
+.Choices__item {
   background-color: lightgrey;
 }
-.choice:focus {
+.Choices__item:focus, .Choices__item::-moz-focus-inner {
   outline-color: transparent;
   outline-style: none;
+  border: 0;
+  outline: none;
 }
-.choice.choice--selected {
+.Choices__item.Choices__item--selected {
   background-color: red;
   color: white;
 }
-.choice.choice--hovered {
+.Choices__item.Choices__item--hovered {
   border: 2px solid lightblue;
 }
-.choice.choice--focused, .choice:focus {
+.Choices__item.Choices__item--focused, .Choices__item:focus {
   border: 2px solid lightgreen;
 }
