--- a/stories/styles/slider-like.css
+++ b/stories/styles/slider-like.css
@@ -1,11 +1,11 @@
-.speed-choices-container {
+.SpeedChoices {
   position: relative;
   width: 120px;
 
   padding: 5px; /* TODO: This is temporary... */
 }
 
-.speed-choices__background {
+.SpeedChoices__background {
   position: absolute;
 
   display: flex;
@@ -14,7 +14,7 @@
   height: 14px;
   width: 100%;
 }
-.speed-choices-horizontal-bar {
+.SpeedChoices__horizontal-bar {
   align-self: center;
   background-color: lightgrey;
   display: block;
@@ -23,20 +23,20 @@
   width: 100%;
 }
 
-.speed-choices {
+.SpeedChoices__container {
   position: absolute;
   width: 100%;
 }
-.speed-choices__label {
+.SpeedChoices__label {
   display: none;
 }
-.speed-choices__items {
+.SpeedChoices__items {
   position: absolute;
   display: flex;
   justify-content: space-between;
   width: 100%;
 }
-.speed-choice {
+.SpeedChoices__item {
   display: flex;
   flex-direction: column;
   align-self: center;
@@ -45,16 +45,16 @@
 
   cursor: pointer;
 }
-.speed-choice--not-settable:not(.speed-choice__selected) {
+.SpeedChoices__item--not-settable:not(.SpeedChoices__item__selected) {
   visibility: hidden;
   cursor: default;
 }
-.speed-choice__input-container {
+.SpeedChoices__item__input-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.speed-choice__input {
+.SpeedChoices__item__input {
   align-self: center;
   background-color: #beccdc;
   border: none;
@@ -69,26 +69,26 @@
 
   margin-left: -2px;
 }
-.speed-choice__input:active {
+.SpeedChoices__item__input:active {
   padding: 0;
 }
-.speed-choice:first-child {
+.SpeedChoices__item:first-child {
   flex: 0 0 4px;
 }
-.speed-choice:first-child .speed-choice__input {
+.SpeedChoices__item:first-child .SpeedChoices__item__input {
   align-self: flex-start;
 }
-.speed-choice:last-child {
+.SpeedChoices__item:last-child {
   flex: 0 0 4px;
 }
-.speed-choice:last-child .speed-choice__input {
+.SpeedChoices__item:last-child .SpeedChoices__item__input {
   align-self: flex-end;
 }
 
-.speed-choice__label {
+.SpeedChoices__item__label {
   display: none;
 }
-.speed-choice--hovered .speed-choice__input {
+.SpeedChoices__item--hovered .SpeedChoices__item__input {
   border: 2px solid lightblue;
   border-radius: 8px;
 
@@ -98,16 +98,16 @@
   margin-left: -4px;
 }
 
-.speed-choice--focused .speed-choice__input, .speed-choice__input:focus {
+.SpeedChoices__item--focused .SpeedChoices__item__input, .SpeedChoices__item__input:focus {
   display: inline-block;
   border: 2px solid lightgreen;
 }
-.speed-choice__input::-moz-focus-inner {
+.SpeedChoices__item__input::-moz-focus-inner {
   border: 0;
   outline: none;
 }
 
-.speed-choice--selected .speed-choice__input {
+.SpeedChoices__item--selected .SpeedChoices__item__input {
   background-color: red;
   border-radius: 14px;
   color: white;
@@ -117,7 +117,7 @@
 
   margin-left: -7px;
 }
-.speed-choice--selected .speed-choice__label {
+.SpeedChoices__item--selected .SpeedChoices__item__label {
   display: block;
   color: white;
   font-size: 8px;
